# GoQuant-Deribit-Trader

./: README.md  logs.txt  trading_system
Trading System/: .gitignore  Assignment_GoQuant.vcxproj  Assignment_GoQuant.vcxproj.filters  CMakeLists.txt  Makefile  README.md  TradingSystem.sln  helper.cpp  helper.h  logs.txt  main.cpp  trading_system
Websocket Server/client/: .gitignore  CMakeLists.txt  README.md  client.cpp  client.sln  client.vcxproj  client.vcxproj.filters
Websocket Server/server/: .gitignore  CMakeLists.txt  README.md  server.cpp  server.sln  server.vcxproj  server.vcxproj.filters
